--- a/Readme
+++ b/Readme
@@ -1,4 +1,9 @@
-This program randomly generates a solvable sudoku board and also solves it using the backtracking algorithm.
-It also shows the steps followed by the algorithm through the GUI. This helps in visualizing how the algorithm works.
-The library you need to install for this program is tkinter.
-How to install tkinter for python: https://stackoverflow.com/questions/20044559/how-to-pip-or-easy-install-tkinter-on-windows
+# Sudoku Solver
+
+Description:
+- A python program that randomly generates a solvable sudoku board and also solves it using the backtracking algorithm.
+- Also shows the steps followed by the algorithm through the GUI. This helps in visualizing how the algorithm works.
+
+Library Requirements:
+- Tkinter.
+-- How to install tkinter for python: https://stackoverflow.com/questions/20044559/how-to-pip-or-easy-install-tkinter-on-windows
